<resources>
    <string name="app_name">Los_angles_guide</string>
    <string name="hotels">Hotels</string>
    <string name="popular">Popular</string>
    <string name="restaurants">Restaurants</string>
    <string name="coffess">Coffees</string>
    <string name="bars">Bars</string>
    <string name="dance_clubs">Dance clubs</string>
    <string name="shopping">Shopping</string>
    <string name="hospitals">Hospitals</string>
    <string name="monuments">Monuments</string>
    <string name="beachs">Beachs</string>
    <string name="aeroports">Aeroports</string>
    <string name="casinos">Casinos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="banner_ad_unit_id">ca-app-pub-6158022415806589/3630392558</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
